GNOME Bugzilla – Bug 753767
error: conflicting types for 'rhythmdb_metadata_cache_purge'
Last modified: 2015-08-18 21:24:58 UTC
Hi, saw that Jonathan committed a rather interesting new plugin. So I've tried to build HEAD on Ubuntu 14.04.3 The build failed - below is the snippet from the buildlog - I've linked the full buildlog created by Launchpad.net build system. Note - the 64bit build worked correctly. The 32bit build which is built automatically by Launchpad with the same sources failed. Any thoughts as to the issue here? 32bit buildlog that failed - https://launchpad.net/~fossfreedom/+archive/ubuntu/testbuilds/+build/7813064/+files/buildlog_ubuntu-trusty-i386.rhythmbox_3.2.4-1%7Eppafossfreedomtrustyubuntu1_BUILDING.txt.gz This is 64bit buildlog that worked: - https://launchpad.net/~fossfreedom/+archive/ubuntu/testbuilds/+build/7813063/+files/buildlog_ubuntu-trusty-amd64.rhythmbox_3.2.4-1%7Eppafossfreedomtrustyubuntu1_BUILDING.txt.gz libtool: compile: gcc -DHAVE_CONFIG_H -I. -I.. -DGNOMELOCALEDIR=\"/usr/share/locale\" -DG_LOG_DOMAIN=\"RhythmDB\" -I.. -I../lib -I../widgets -I../metadata -I../podcast -I../lib -pthread -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng12 -I/usr/include/libsoup-2.4 -I/usr/include/libxml2 -I/usr/include/json-glib-1.0 -I/usr/include/gobject-introspection-1.0 -I/usr/include/libpeas-1.0 -pthread -I/usr/include/gstreamer-1.0 -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -DGST_USE_UNSTABLE_API -fno-strict-aliasing -D_FORTIFY_SOURCE=2 -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -Wall -c rhythmdb-metadata-cache.c -fPIC -DPIC -o .libs/rhythmdb-metadata-cache.o rhythmdb-metadata-cache.c:403:1: error: conflicting types for 'rhythmdb_metadata_cache_purge' rhythmdb_metadata_cache_purge (RhythmDBMetadataCache *cache, ^ In file included from rhythmdb-metadata-cache.c:39:0: rhythmdb-metadata-cache.h:75:7: note: previous declaration of 'rhythmdb_metadata_cache_purge' was here void rhythmdb_metadata_cache_purge (RhythmDBMetadataCache *cache, ^ make[3]: *** [rhythmdb-metadata-cache.lo] Error 1
fixed in commit dfbddc0