rhythmdb: functions and prototypes should match

https://bugzilla.gnome.org/show_bug.cgi?id=753767